# Toolman

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  NOTICE.md  README.md  THIRD_PARTY_NOTICES.md  TODO.md  eslint.config.mjs  git_status.txt  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
crates/toolman-community-hub/: Cargo.toml
crates/toolman-community-hub/src/: config.rs  lib.rs  main.rs  rate_limit.rs  state.rs  testing.rs
crates/toolman-community-hub/src/api/: auth.rs  board.rs  comments.rs  diagnostics.rs  error.rs  federation.rs  health.rs  install.rs  jwt.rs  mod.rs  moderation.rs  news.rs  orders.rs  presence.rs  response.rs  reviews.rs  search_semantic.rs  tasks.rs  users.rs
crates/toolman-community-hub/src/api/marketplace/: knowledge.rs  mcp.rs  mod.rs  resources.rs  skills.rs  workflows.rs
crates/toolman-community-hub/src/db/: mod.rs  pool.rs  seed.rs
crates/toolman-community-hub/src/db/migrations/: 001_community_users.sql  002_community_resources.sql  003_community_search.sql  (+17 more)
crates/toolman-community-hub/src/domain/: install.rs  mod.rs  moderation.rs  news.rs  order.rs  resource.rs  social.rs  task.rs  user.rs
crates/toolman-community-hub/src/repositories/: comment_repository.rs  device_blacklist_repository.rs  device_presence_repository.rs  dislike_repository.rs  favorite_repository.rs  fetch_log_repository.rs  install_repository.rs  like_repository.rs  mod.rs  moderation_log_repository.rs  news_article_repository.rs  order_repository.rs  report_repository.rs  resource_repository.rs  review_repository.rs  rss_source_repository.rs  task_application_repository.rs  task_delivery_repository.rs  task_repository.rs  task_review_repository.rs  user_repository.rs  version_repository.rs
crates/toolman-community-hub/src/rss/: article_extractor.rs  fetcher.rs  mod.rs  normalize.rs
crates/toolman-community-hub/src/services/: admin_management_service.rs  authing_community_role.rs  board_service.rs  comment_service.rs  dev_test_user_role.rs  embedding_service.rs  federation_catalog_signing.rs  federation_service.rs  install_service.rs  knowledge_market_service.rs  marketplace_service.rs  mcp_market_service.rs  mod.rs  moderation_service.rs  news_service.rs  order_service.rs  presence_service.rs  rating_service.rs  resource_social_service.rs  review_service.rs  search_service.rs  skill_market_service.rs  storage_service.rs  task_market_service.rs  task_review_service.rs  workflow_market_service.rs
crates/toolman-community-hub/tests/: large_multipart_http.rs  marketplace_publish_install.rs  moderation_workflow.rs  task_workflow.rs
crates/toolman-community-hub/tests/common/: mod.rs
crates/toolman-docx-core/: Cargo.toml
crates/toolman-docx-core/src/: cache.rs  convert.rs  format.rs  lib.rs  lo_pool.rs  main.rs
crates/toolman-libp2p/: Cargo.toml  package.json
crates/toolman-libp2p/src/: config.rs  dht_state.rs  dial_address.rs  identity.rs  lib.rs  pubsub.rs  pubsub_state.rs  state.rs  swarm.rs
crates/toolman-libp2p/src/napi/: bindings.rs  dht_napi.rs  mod.rs  network.rs  pubsub_napi.rs
crates/toolman-p2p/: Cargo.toml  package.json
crates/toolman-p2p/src/: lib.rs  state.rs  util.rs
crates/toolman-p2p/src/connection/: connection_manager.rs  mod.rs  types.rs  webrtc_session.rs
crates/toolman-p2p/src/crypto/: channel_cipher.rs  device_identity.rs  key_registry.rs  mod.rs  workspace_cert.rs
crates/toolman-p2p/src/discovery/: local_beacon.rs  mod.rs  node_discovery.rs
crates/toolman-p2p/src/event/: event_store.rs  mod.rs  replication.rs  snapshot.rs
crates/toolman-p2p/src/napi/: bindings.rs  connection.rs  crypto.rs  device_identity.rs  discovery.rs  event_store.rs  invite.rs  mod.rs  snapshot.rs
crates/toolman-p2p/src/signaling/: invite_signaling.rs  mdns_signaling.rs  mod.rs
(+1776 files in other folders)
