[package]
name = "toolman-community-hub"
version = "0.1.0"
edition = "2021"
description = "Toolman Community Hub — local sidecar for marketplace, news, and tasks"
license = "AGPL-3.0-or-later"

[[bin]]
name = "toolman-community-hub"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "6"
feed-rs = "2"
hex = "0.4"
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
base64 = "0.22"
bs58 = "0.5"
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
scraper = "0.22"
encoding_rs = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower-http = { version = "0.6", features = ["trace", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
zip = "2"

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tower = { version = "0.5", features = ["util"] }
