[package]
name = "toolman-docx-core"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Toolman Word format detection and conversion (.doc/.wps/.wpsx → .docx)"

[[bin]]
name = "toolman-docx-core"
path = "src/main.rs"

[dependencies]
office_oxide = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["process", "fs", "macros", "rt-multi-thread", "sync"] }
tempfile = "3.8"
clap = { version = "4.5", features = ["derive"] }
lru = "0.12"
