[package]
name = "toolman-libp2p"
version = "0.1.0"
edition = "2021"
description = "Toolman libp2p network layer (LAN discovery, DHT client, N-API)"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi8", "tokio_rt"] }
napi-derive = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
once_cell = "1"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
keyring = "3"
ring = "0.17"
ed25519-dalek = { version = "2", features = ["pkcs8"] }
libp2p = { version = "0.54", features = [
  "tokio",
  "tcp",
  "noise",
  "yamux",
  "mdns",
  "kad",
  "identify",
  "ping",
  "gossipsub",
  "macros",
] }

[build-dependencies]
napi-build = "2"
