[package]
name = "toolman-p2p"
version = "0.1.0"
edition = "2021"
description = "Toolman P2P workspace native core (discovery, WebRTC, sync)"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi8", "tokio_rt"] }
napi-derive = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
once_cell = "1"
if-addrs = "0.14"
keyring = "3"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
bytes = "1"
futures = "0.3"
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
# V1 stack — wired in later tasks; listed here per architecture spec
mdns-sd = "0.11"
ring = "0.17"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webrtc = "0.11"
zstd = "0.13"

[build-dependencies]
napi-build = "2"
